# PiMonitor

./: .gitignore  CMakeLists.txt  LICENSE  setup.bat  setup.sh  vcpkg.json
client/: CMakeLists.txt  setup.bat  setup.sh  vcpkg.json
client/include/: ClientImpl.hpp  DataQuery.hpp
client/src/: ClientImpl.cpp  DataQuery.cpp  main  main.cpp
protos/: ping.proto
server/: __main__.py  app.py  grpc_impl.py  main.py  mainapplication.py  pimonitor.service  ping_pb2.py  ping_pb2_grpc.py  protoc.bat
server/FormFiles/: main.ui
server/include/: ServerImpl.hpp
server/src/: ServerImpl.cpp  main  main.cpp
